<resources>
    <string name="app_name">Smart Crutch</string>
    <string name="title_activity_page_maps">page_MapsActivity</string>
    <string name="title_activity_page_maps1">page_maps1</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="login">Login</string>
    <string name="real_time_image">real-time image</string>
    <string name="heartbeat_detection">heartbeat detection</string>
    <string name="real_time_positioning">real-time positioning</string>
    <string name="select_language">Choose a language</string>
    <string name="lan_zh_rTW">Chinese Traditional</string>
    <string name="Follow_the_system">Follow the system</string>
    <string name="lan_en_US">English</string>
    <string name="lan_ko_rKR">Korean</string>
    <string name="language">Language</string>
    <string name="lan_zh_CN">Chinese Simplified</string>
    <string name="createAccount">CreateAccount</string>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="view_live_images">View live images</string>
    <string name="stop">Stop</string>
    <string name="email">Email :</string>
    <string name="verifypassword">Verify Password :</string>
    <string name="phone_num">Phone :</string>
    <string name="name">Name :</string>
    <string name="password">Password :</string>
    <string name="reg">Register</string>
    <string name="device_code">Device Code :</string>
    <string name="heart_chart">Heartbeat chart in the past 20 minutes</string>
    <string name="view_chart">view_chart</string>

</resources>